# SIEXPORT

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  ping_db.py  pyproject.toml
src/efdi/: __init__.py  config.py  main.py
src/efdi/api/: dependencies.py  routes.py  routes_captacion.py  routes_caracterizacion.py  routes_dashboard.py  routes_educacion_grupal.py  routes_findrisc.py  routes_me.py  routes_planfami.py  routes_pruebas.py  routes_users.py  routes_vacunacion.py  schemas.py
src/efdi/domain/: models.py  services.py
src/efdi/infrastructure/: audit_log.py  db.py  job_store.py  mock_data.py  repository.py  repository_captacion.py  repository_caracterizacion.py  repository_educacion_grupal.py  repository_findrisc.py  repository_planfami.py  repository_pruebas.py  repository_vacunacion.py  user_store.py
src/efdi/pdf/: generator.py  generator_captacion.py  generator_caracterizacion.py  generator_educacion_grupal.py  generator_findrisc.py  generator_planfami.py  generator_pruebas.py  generator_vacunacion.py  parallel.py  parallel_captacion.py  parallel_caracterizacion.py  parallel_educacion_grupal.py  parallel_findrisc.py  parallel_planfami.py  parallel_pruebas.py  parallel_vacunacion.py  programas_catalogo.py
src/efdi/services/: auth_service.py  extraction.py  extraction_captacion.py  extraction_caracterizacion.py  (+5 more)
tests/: conftest.py  test_agrupacion.py  test_api.py  test_auth_rbac.py  test_caracterizacion.py  test_facturas.py  test_findrisc.py  test_mock_data.py  test_pdf_parallel.py  test_planfami.py  test_pruebas.py
(+3 files in other folders)
