[project]
name = "efdi"
version = "0.1.0"
description = "DataDownload — Sistema de exportación que genera PDFs por afiliado desde SQL Server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dateutil>=2.9.0",
    "python-multipart>=0.0.9",
    "reportlab>=4.1.0",
    "structlog>=24.1.0",
    "bcrypt>=4.1.0",
]

[project.optional-dependencies]
sqlserver = ["pyodbc>=5.1.0"]
email = ["email-validator>=2.0.0"]
excel = ["openpyxl>=3.1.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
efdi = ["templates/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
